fix: better alignment

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -195,10 +195,12 @@ input:checked + .slider:before {
 .rules-list p {
     margin: 0.5rem 0;
     padding-left: 0;
+    text-align: left;
 }
 
 .color-examples {
-    margin-left: 1.5rem;
+    margin-left: 0;
+    padding-left: 0;
 }
 
 .green-example {
